DB Dump for 3 major EDBs

--- a/builder_pipe/config/lipmaps.ini
+++ b/builder_pipe/config/lipmaps.ini
@@ -1,30 +1,30 @@
 [settings]
-lipmaps_attr_etc: chebi_id_alt,hmdb_id_alt
+lipidmaps_attr_etc: chebi_id_alt,hmdb_id_alt
 
 [attribute_mapping]
-LM_ID lipidmaps_id
-NAME names
-SYSTEMATIC_NAME names
-SYNONYMS names
-ABBREVIATION names
+LM_ID: lipidmaps_id
+NAME: names
+SYSTEMATIC_NAME: names
+SYNONYMS: names
+ABBREVIATION: names
 
-EXACT_MASS mass
-#SMILES smiles
-#INCHI inchi
-INCHI_KEY inchikey
-#FORMULA formula
+EXACT_MASS: mass
+# SMILES smiles
+# INCHI inchi
+INCHI_KEY: inchikey
+# FORMULA formula
 
-#KEGG_ID kegg_id
-#HMDB_ID hmdb_id
-#CHEBI_ID chebi_id
-PUBCHEM_CID pubchem_id
-pubchem_compound_id pubchem_id
-#LIPIDBANK_ID lipidbank_id
-#SWISSLIPIDS_ID swisslipids_id
+# KEGG_ID kegg_id
+# HMDB_ID hmdb_id
+# CHEBI_ID chebi_id
+PUBCHEM_CID: pubchem_id
+pubchem_compound_id: pubchem_id
+# LIPIDBANK_ID lipidbank_id
+# SWISSLIPIDS_ID swisslipids_id
 
-wikipedia_id wiki_id
+wikipedia_id: wiki_id
 
-#CATEGORY category
-#MAIN_CLASS main_class
-#SUB_CLASS sub_class
-CLASS_LEVEL4 lvl4_class
+# CATEGORY category
+# MAIN_CLASS main_class
+# SUB_CLASS sub_class
+# CLASS_LEVEL4: lvl4_class
