Pubchem parsing and Chem names normalizing special characters

--- a/builder_pipe/config/hmdb.ini
+++ b/builder_pipe/config/hmdb.ini
@@ -1,15 +1,17 @@
 [settings]
 hmdb_attr_etc: hmdb_id_alt
 
+# this setting depends if you use lxml or recursive xml parser
+flatten_hmdb_children: no
 
 [attribute_mapping]
 accession: hmdb_id
-##- secondary_accessions.accession = 'hmdb_id_alt'
+secondary_accessions = hmdb_id_alt
 
 name: names
 iupac_name: names
 traditional_iupac: names
-##- synonyms.synonym = 'names'
+synonyms: names
 
 # description = 'description'
 state: state
