--- a/builder_pipe/config/xml_hmdb.ini
+++ b/builder_pipe/config/xml_hmdb.ini
@@ -1,5 +1,8 @@
-;[__proces__]
-;full_debug = no
-;
-;[debug]
+[xml]
+xmlns = http://www.hmdb.ca
+root_tag = metabolite
+
+parse_hierachy_tags = secondary_accessions,synonyms
+
+[debug]
 ;stop_after = 10
