Secondary IDs and bugfixes

--- a/builder_pipe/config/hmdb.ini
+++ b/builder_pipe/config/hmdb.ini
@@ -1,5 +1,5 @@
 [settings]
-hmdb_attr_etc: hmdb_id_alt
+hmdb_attr_etc:
 
 # this setting depends if you use lxml or recursive xml parser
 flatten_hmdb_children: no
