--- a/builder_pipe/config/chebi.ini
+++ b/builder_pipe/config/chebi.ini
@@ -1,5 +1,5 @@
 [settings]
-chebi_attr_etc: quality,chebi_id_alt,lipidmaps_class_id
+chebi_attr_etc: quality,chebi_star,lipidmaps_class_id
 
 
 [attribute_mapping]
