--- a/builder_pipe/config/chebi.ini
+++ b/builder_pipe/config/chebi.ini
@@ -19,8 +19,8 @@ Definition: description
 PubChem Database Links: pubchem_id
 KEGG COMPOUND Database Links: kegg_id
 HMDB Database Links: hmdb_id
-LIPID MAPS instance Database Links: lipidmaps_id
-LIPID MAPS class Database Links: lipidmaps_class_id
+LIPID MAPS instance Database Links: lipmaps_id
+LIPID MAPS class Database Links: lipmaps_id
 CAS Registry Numbers: cas_id
 Chemspider Database Links: chemspider_id
 
