--- a/builder_pipe/config/lipmaps.ini
+++ b/builder_pipe/config/lipmaps.ini
@@ -2,13 +2,13 @@
 lipidmaps_attr_etc:
 
 [attribute_mapping]
-LM_ID: lipidmaps_id
+LM_ID: lipmaps_id
 NAME: names
 SYSTEMATIC_NAME: names
 SYNONYMS: names
 ABBREVIATION: names
 
-EXACT_MASS: mass
+EXACT_MASS: mi_mass
 INCHI_KEY: inchikey
 PUBCHEM_CID: pubchem_id
 pubchem_compound_id: pubchem_id
