Updated bulk updaters and improved efficiency

--- a/builder_pipe/config/hmdb.ini
+++ b/builder_pipe/config/hmdb.ini
@@ -16,6 +16,7 @@ synonyms: names
 # description = 'description'
 state: state
 
+formal_charge: charge
 average_molecular_weight: mass
 avg_mol_weight: mass
 monoisotopic_molecular_weight: mi_mass
