Refactoring into metcore

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+# Sync
+requests
 psycopg2~=2.9
-mfdb-parsinglib~=1.0
-eme~=5.3
-lxml~=4.9
-playsound~=1.3
+
+# Async
 aiohttp~=3.8
+asyncpg~=0.27
+
+lxml~=4.9
+
+playsound~=1.3
+
+# mfdb-parsinglib~=1.0
+# eme~=5.3
