--- a/edb_handlers/edb_chebi/dbb/parse_chebi.toml
+++ b/edb_handlers/edb_chebi/dbb/parse_chebi.toml
@@ -1,6 +1,8 @@
+[meta]
+tags = ['parser', 'dbsave']
+
 [settings]
 chebi_attr_etc = ['quality','chebi_star','lipidmaps_class_id','ch_iupac_name']
-
 
 [attribute_mapping]
 'ChEBI ID' = 'chebi_id'
