Last refactor before api manager-edb>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-.idea/
-_junk/
-pubchem_ids.txt
-error.txt
-
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -133,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.idea/
+_junk/
+pubchem_ids.txt
+error.txt
+docker/
