Fixed api calling

--- a/edb_handlers/edb_chebi/mapping.toml
+++ b/edb_handlers/edb_chebi/mapping.toml
@@ -17,7 +17,7 @@ Formulae = 'formula'
 inchiKey = 'inchikey'
 InchiKey = 'inchikey'
 
-wikipedia accession = 'wiki_id'
+"wikipedia accession" = 'wiki_id'
 wikipedia_id = 'wiki_id'
 SecondaryChEBIIds = 'chebi_id_alt'
-kegg compound_id = 'kegg_id'
+"kegg compound_id" = 'kegg_id'
