--- a/mdb_builder/discovery/test_discovery.toml
+++ b/mdb_builder/discovery/test_discovery.toml
@@ -1,47 +1,14 @@
-[pubchem]
-discoverable = true
-fetch_api = false
-cache_enabled = true
-cache_api_result = false
-
-[chebi]
+[default]
 discoverable = true
 fetch_api = true
 cache_enabled = true
-cache_api_result = false
-
-[hmdb]
-discoverable = true
-fetch_api = true
-cache_enabled = true
-cache_api_result = false
-
-[kegg]
-discoverable = true
-fetch_api = true
-cache_enabled = true
-cache_api_result = false
-
-[lipmaps]
-discoverable = true
-fetch_api = true
-cache_enabled = true
-cache_api_result = false
+cache_api_result = true
 
 [cas]
 discoverable = true
-
-[chemspider]
-discoverable = true
-
-[metlin]
-discoverable = true
-
-[inchikey]
-discoverable = true
-
-[smiles]
-discoverable = false
+fetch_api = false
+cache_enabled = false
+cache_api_result = false
 
 [swisslipids]
 # not yet supported due to a bug
